2007-11-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Change patterns for removing spaces around quotation marks to count
	the quotation marks to remove the correct space in the middle of text,
	instead of only at the beginning or end of text.

2007-11-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number to match branch release 0.12.3.

2007-11-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.conf:
	* data/patterns/Latn.common-error.in:
	Add patterns to remove spaces around quotation marks.

2007-10-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (preview):
	Do not remove output_path if an exception is caught, because the path
	is not available and the file is removed by atexit anyway. (#10203)

2007-10-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py (_shift_destination):
	Add missing comma to isinstance call. (#10200)

2007-10-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number to match branch release 0.12.2.

2007-10-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/scripts.py:
	Revise translators note.

2007-10-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/save.py (set_name):
	Set the current folder before setting filename.

2007-10-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/open-dialog.glade:
	* data/glade/save-dialog.glade:
	Fix extra widget spacing on sides.

2007-10-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	* gaupol/tags/microdvd.py:
	* gaupol/tags/mpl2.py:
	* gaupol/tags/ssa.py:
	* gaupol/tags/subrip.py:
	* gaupol/tags/taglib.py:
	Fix wild and potentially wild regular expressions for tags that matched
	text after the tag as well causing that text to be removed when
	converting tags to a different format. (#10140)

2007-10-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/clipboard.py:
	* gaupol/agents/edit.py: